tdf#61511 RTF export: handle page background solid color fill

Change-Id: I562419b6d4fb791ef5b255effe9a4510d930bdbc