sw/source/filter/ww8/docxexport.cxx
@@ -1306,22 +1306,6 @@ bool DocxExport::isMirroredMargin()
     return bMirroredMargins;
 }
 
-boost::optional<SvxBrushItem> DocxExport::getBackground()
-{
-    boost::optional<SvxBrushItem> oRet;
-    const SwFrameFormat &rFormat = m_pDoc->GetPageDesc(0).GetMaster();
-    SvxBrushItem aBrush(RES_BACKGROUND);
-    SfxItemState eState = rFormat.GetBackgroundState(aBrush);
-
-    if (SfxItemState::SET == eState)
-    {
-        // The 'color' is set for the first page style - take it and use it as the background color of the entire DOCX
-        if (aBrush.GetColor().GetColor() != COL_AUTO)
-            oRet.reset(aBrush);
-    }
-    return oRet;
-}
-
 void DocxExport::WriteMainText()
 {
     // setup the namespaces
