sw/source/filter/ww8/wrtww8.hxx
@@ -865,6 +865,8 @@ protected:
 
     void SetCurPam(sal_uLong nStt, sal_uLong nEnd);
 
+    /// Get background color of the document, if there is one.
+    boost::optional<SvxBrushItem> getBackground();
     /// Populates m_vecBulletPic with all the bullet graphics used by numberings.
     int CollectGrfsOfBullets();
     /// Write the numbering picture bullets.
