sw/qa/extras/rtfimport/rtfimport.cxx
@@ -1221,13 +1221,6 @@ DECLARE_RTFIMPORT_TEST(testFdo64671, "fdo64671.rtf")
     getRun(getParagraph(1), 1, OUString("\xC5\xBD", 2, RTL_TEXTENCODING_UTF8));
 }
 
-DECLARE_RTFIMPORT_TEST(testPageBackground, "page-background.rtf")
-{
-    // The problem was that \background was ignored.
-    uno::Reference<beans::XPropertySet> xPageStyle(getStyles("PageStyles")->getByName(DEFAULT_STYLE), uno::UNO_QUERY);
-    CPPUNIT_ASSERT_EQUAL(sal_Int32(0x92D050), getProperty<sal_Int32>(xPageStyle, "BackColor"));
-}
-
 DECLARE_RTFIMPORT_TEST(testFdo81944, "fdo81944.rtf")
 {
     // font properties in style were not imported
